# Icarus

./: .editorconfig  .gitignore  Directory.Build.props  Directory.Packages.props  Icarus.sln  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: agents.md
.github/workflows/: ci.yml
docs/: 00-overview.md  01-architecture.md  02-local-dev-with-aspire.md  03-configuration.md  04-data-contracts.md  05-mcp-tools.md  06-sse.md  07-testing.md  08-models.md  09-prompts.md
infra/scripts/: healthcheck.sh  pull-ollama-models.sh  seed-sample-data.sh
src/Icarus.AppHost/: Icarus.AppHost.csproj  Program.cs
src/Icarus.ServiceDefaults/: Extensions.cs  Icarus.ServiceDefaults.csproj
src/analytics/Icarus.Analytics.Tests.Integration/: Icarus.Analytics.Tests.Integration.csproj  ReportsApiTests.cs
src/analytics/Icarus.Reports.Api/: Program.cs  appsettings.json
src/controlplane/Icarus.Orchestrator.Api/: Icarus.Orchestrator.Api.csproj  Program.cs  appsettings.json
src/controlplane/Icarus.Orchestrator.Application/: Icarus.Orchestrator.Application.csproj
src/controlplane/Icarus.Orchestrator.Infrastructure/: Icarus.Orchestrator.Infrastructure.csproj
src/controlplane/Icarus.Orchestrator.Mcp/: Program.cs  appsettings.json
src/controlplane/Icarus.Orchestrator.Tests.Integration/: ApiTests.cs  Icarus.Orchestrator.Tests.Integration.csproj  SnapshotTests.cs
src/ml/embeddings-rs/: Cargo.toml
src/ml/embeddings-rs/src/: main.rs
src/ml/embeddings-rs/tests/: integration_test.rs
tests/snapshots/: README.md
(+56 files in other folders)
