[package]
name = "embeddings-rs"
version = "0.1.0"
edition = "2021"
description = "Icarus embeddings microservice — deterministic hash-based embeddings for development"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
